--- a/css/main.css
+++ b/css/main.css
@@ -346,7 +346,7 @@ button {
 
 .hero-content__box {
   width: 100%;
-  margin-top: 95px;
+  padding-top: 95px;
 }
 
 .hero-content__title {
@@ -417,6 +417,7 @@ button {
 .money__heading {
   color: #101828;
   text-align: center;
+  margin-bottom: 20px;
   font-family: Inter;
   font-size: 36px;
   font-style: normal;
@@ -425,31 +426,21 @@ button {
   letter-spacing: -0.72px;
 }
 
-.money__text {
-  display: flex;
-  width: 680px;
-  flex-direction: column;
-  align-items: center;
-  gap: 20px;
-  margin: 0 auto;
-  margin-bottom: 64px;
-}
-
 .money__desc {
   color: #667085;
   text-align: center;
-  /* Text xl/Normal */
+  max-width: 768px;
+  margin: 0 auto 64px;
   font-family: Inter;
   font-size: 20px;
   font-style: normal;
   font-weight: 400;
   line-height: 30px;
-  /* 150% */
 }
 
 .simple-security {
   display: flex;
-  width: 1280px;
+  max-width: 1280px;
   align-items: center;
   gap: 48px;
   margin-bottom: 64px;
@@ -459,7 +450,7 @@ button {
   display: flex;
   position: relative;
   width: 832px;
-  height: 400px;
+  min-height: 400px;
   padding: 48px;
   justify-content: space-between;
   align-items: flex-start;
@@ -497,6 +488,11 @@ button {
   font-style: normal;
   font-weight: 400;
   line-height: 26px;
+}
+
+.simple__phone-img {
+  position: absolute;
+  right: 48px;
 }
 
 .simple__card-images {
@@ -654,6 +650,7 @@ button {
   font-family: Inter;
   line-height: 26px;
   width: 365px;
+  z-index: 1;
 }
 
 .banks-grid {
@@ -666,21 +663,33 @@ button {
 }
 
 .banks-grid__item {
-  width: 74.419px;
-  height: 74.419px;
-  border-radius: 11.907px;
+  width: 74px;
+  height: 74px;
+  border-radius: 11px;
   background: rgba(0, 0, 0, 0.08);
 }
 .banks-grid__item:nth-child(1) {
   background-color: #F3F6F8;
 }
+.banks-grid__item:nth-child(2) {
+  background-color: #F3F6F8;
+}
 .banks-grid__item:nth-child(3) {
+  background-color: #F3F6F8;
+}
+.banks-grid__item:nth-child(5) {
   background-color: #F3F6F8;
 }
 .banks-grid__item:nth-child(7) {
   background-color: #F3F6F8;
 }
+.banks-grid__item:nth-child(8) {
+  background-color: #F3F6F8;
+}
 .banks-grid__item:nth-child(10) {
+  background-color: #F3F6F8;
+}
+.banks-grid__item:nth-child(11) {
   background-color: #F3F6F8;
 }
 .banks-grid__item:nth-child(14) {
@@ -692,6 +701,9 @@ button {
 .banks-grid__item:nth-child(18) {
   background-color: #F3F6F8;
 }
+.banks-grid__item:nth-child(19) {
+  background-color: #F3F6F8;
+}
 .banks-grid__item:nth-child(20) {
   background-color: #F3F6F8;
 }
@@ -699,21 +711,13 @@ button {
 .features {
   padding-top: 96px;
   padding-bottom: 96px;
-}
-
-.features__text {
-  display: flex;
-  width: 768px;
-  flex-direction: column;
-  align-items: center;
-  gap: 20px;
-  margin: 0 auto;
-  margin-bottom: 64px;
+  background-color: #F9F9FB;
 }
 
 .features__heading {
   color: #101828;
   text-align: center;
+  margin-bottom: 20px;
   font-family: Inter;
   font-size: 36px;
   font-style: normal;
@@ -726,6 +730,7 @@ button {
   color: #667085;
   text-align: center;
   width: 793px;
+  margin: 0 auto 64px;
   font-family: Inter;
   font-size: 20px;
   font-style: normal;
