--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,22 +1,13 @@
 .features {
     padding-top: 96px;
     padding-bottom: 96px;
-}
-
-.features__text {
-    display: flex;
-    width: 768px;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-
-    margin: 0 auto;
-    margin-bottom: 64px;
+    background-color: #F9F9FB;
 }
 
 .features__heading {
     color: getColor(gray-900);
     text-align: center;
+    margin-bottom: 20px;
 
     font-family: Inter;
     font-size: 36px;
@@ -30,6 +21,7 @@
     color: getColor(gray-500);
     text-align: center;
     width: 793px;
+    margin: 0 auto 64px;
 
     font-family: Inter;
     font-size: 20px;
