--- a/sass/components/_money.scss
+++ b/sass/components/_money.scss
@@ -12,6 +12,7 @@
 .money__heading {
     color: getColor(gray-900);
     text-align: center;
+    margin-bottom: 20px;
 
     font-family: Inter;
     font-size: 36px;
@@ -21,32 +22,23 @@
     letter-spacing: -0.72px;
 }
 
-.money__text {
-    display: flex;
-    width: 680px;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-    margin: 0 auto;
-    margin-bottom: 64px;
-}
-
 .money__desc {
     color: getColor(gray-500);
     text-align: center;
+    max-width: 768px;
+    margin: 0 auto 64px;
 
-    /* Text xl/Normal */
+
     font-family: Inter;
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
     line-height: 30px;
-    /* 150% */
 }
 
 .simple-security {
     display: flex;
-    width: 1280px;
+    max-width: 1280px;
     align-items: center;
     gap: 48px;
     margin-bottom: 64px;
@@ -56,7 +48,7 @@
     display: flex;
     position: relative;
     width: 832px;
-    height: 400px;
+    min-height: 400px;
     padding: 48px;
     justify-content: space-between;
     align-items: flex-start;
@@ -96,6 +88,11 @@
     font-style: normal;
     font-weight: 400;
     line-height: 26px;
+}
+
+.simple__phone-img {
+    position: absolute;
+    right: 48px;
 }
 
 .simple__card-images {
@@ -265,6 +262,8 @@
     font-family: Inter;
     line-height: 26px;
     width: 365px;
+
+    z-index: 1;
 }
 
 .banks-grid {
@@ -277,12 +276,17 @@
 }
 
 .banks-grid__item {
-    width: 74.419px;
-    height: 74.419px;
-    border-radius: 11.907px;
+    width: 74px;
+    height: 74px;
+    border-radius: 11px;
     background: rgba(0, 0, 0, 0.08);
+    
 
     &:nth-child(1) {
+        background-color: #F3F6F8;
+    }
+
+    &:nth-child(2) {
         background-color: #F3F6F8;
     }
 
@@ -290,11 +294,23 @@
         background-color: #F3F6F8;
     }
 
+    &:nth-child(5) {
+        background-color: #F3F6F8;
+    }
+
     &:nth-child(7) {
         background-color: #F3F6F8;
     }
 
+    &:nth-child(8) {
+        background-color: #F3F6F8;
+    }
+
     &:nth-child(10) {
+        background-color: #F3F6F8;
+    }
+
+    &:nth-child(11) {
         background-color: #F3F6F8;
     }
 
@@ -307,6 +323,10 @@
     }
 
     &:nth-child(18) {
+        background-color: #F3F6F8;
+    }
+
+    &:nth-child(19) {
         background-color: #F3F6F8;
     }
 
