--- a/css/main.css
+++ b/css/main.css
@@ -328,10 +328,16 @@ button {
   color: white;
   padding: 12px 21px;
   border-radius: 12px;
+  border: 2px solid #023047;
+  transition: 250ms;
   font-family: Inter;
   font-size: 16px;
   font-weight: 500;
   line-height: 24px;
+}
+.header__btn:hover {
+  background-color: white;
+  color: #023047;
 }
 
 .hero {
@@ -493,6 +499,7 @@ button {
 .simple__phone-img {
   position: absolute;
   right: 48px;
+  bottom: 0;
 }
 
 .simple__card-images {
