--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -51,9 +51,16 @@
     color: white;
     padding: 12px 21px;
     border-radius: 12px;
+    border: 2px solid getColor(accent);
+    transition: 250ms;
 
     font-family: Inter;
     font-size: 16px;
     font-weight: 500;
     line-height: 24px;
+
+    &:hover {
+        background-color: white;
+        color: getColor(accent);
+    }
 }
