--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,10 @@ body button {
   cursor: pointer;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 /*! modern-normalize v2.0.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
 /*
 Document
