--- a/sass/components/_join-us.scss
+++ b/sass/components/_join-us.scss
@@ -39,6 +39,7 @@
 
 .testymonials {
     position: relative;
+    width: 576px;
 }
 
 .testymonials__img {
@@ -77,7 +78,7 @@
     align-items: flex-start;
     gap: 16px;
     align-self: stretch;
-    margin-bottom: 16px;
+    margin-bottom: 30px;
 }
 
 .content-box__name {
@@ -118,14 +119,19 @@
     line-height: 28px;
 }
 
-.arrows {
+.splide__arrows {
+    position: absolute;
+    right: 24px;
+    bottom: 0px;
     display: flex;
     align-items: center;
     margin-left: auto;
-    gap: 32px
+    gap: 32px;
 }
 
-.arrows__button {
+.arrows__button--left,
+.arrows__button--right {
+    position: static;
     background-color: #FFFFFF00;
     display: flex;
     width: 56px;
