--- a/sass/base/_body.scss
+++ b/sass/base/_body.scss
@@ -7,10 +7,15 @@ body {
     .container {
         max-width: 1217px;
         padding: 0 17px;
-        margin-left: auto;
-        margin-right: auto;
+        margin: 0 auto;
+
+        @include mobile {
+            max-width: 480px;
+            padding: 0 16px;
+            margin: 0 auto;
+        }
     }
-    
+
     button {
         cursor: pointer;
     }
