--- a/sass/components/_money.scss
+++ b/sass/components/_money.scss
@@ -1,6 +1,12 @@
 .money {
     padding-top: 96px;
     padding-bottom: 96px;
+    overflow: hidden;
+
+    @include mobile {
+        padding-top: 64px;
+        padding-bottom: 64px;
+    }
 }
 
 .money__container {
@@ -20,6 +26,13 @@
     font-weight: 600;
     line-height: 44px;
     letter-spacing: -0.72px;
+
+    @include mobile {
+        font-size: 30px;
+        line-height: 38px;
+        width: 253px;
+        margin: 0 auto 16px;
+    }
 }
 
 .money__desc {
@@ -34,6 +47,10 @@
     font-style: normal;
     font-weight: 400;
     line-height: 30px;
+
+    @include mobile {
+        margin-bottom: 40px;
+    }
 }
 
 .simple-security {
@@ -42,6 +59,10 @@
     align-items: center;
     gap: 48px;
     margin-bottom: 64px;
+
+    @include mobile {
+        flex-direction: column;
+    }
 }
 
 .simple {
@@ -60,6 +81,12 @@
     img {
         margin-left: auto;
     }
+
+    @include mobile {
+        flex-direction: column;
+        width: 100%;
+        padding: 40px 24px 0px;
+    }
 }
 
 .simple__text {
@@ -69,6 +96,10 @@
     align-items: flex-start;
     gap: 12px;
     align-self: stretch;
+
+    @include mobile {
+        width: 100%;
+    }
 }
 
 .simple__heading {
@@ -79,6 +110,11 @@
     font-weight: 600;
     line-height: normal;
     letter-spacing: -0.6px;
+
+    @include mobile {
+        font-size: 28px;
+        letter-spacing: -0.56px;
+    }
 }
 
 .simple__desc {
@@ -88,12 +124,22 @@
     font-style: normal;
     font-weight: 400;
     line-height: 26px;
+
+    @include mobile {
+        margin-bottom: 48px;
+        line-height: 24px;
+    }
 }
 
 .simple__phone-img {
     position: absolute;
     right: 48px;
     bottom: 0;
+
+    @include mobile {
+        position: static;
+        margin: 0 auto;
+    }
 }
 
 .simple__card-images {
@@ -107,11 +153,9 @@
     justify-content: space-between;
     align-items: flex-start;
 
-    // display: flex;
-    // height: 102.548px;
-    // flex-direction: column;
-    // justify-content: space-between;
-    // align-items: flex-start;
+    @include mobile {
+        display: none;
+    }
 }
 
 .security {
@@ -125,6 +169,10 @@
 
     border-radius: 20px;
     background: #EAECFF;
+
+    @include mobile {
+        padding: 40px 24px;
+    }
 }
 
 .security__icon {
@@ -150,6 +198,11 @@
     line-height: normal;
     letter-spacing: -0.6px;
     margin-bottom: 12px;
+
+    @include mobile {
+        font-size: 30px;
+        line-height: -0.56px;
+    }
 }
 
 .security__desc {
@@ -159,7 +212,10 @@
     font-style: normal;
     font-weight: 400;
     line-height: 26px;
-    /* 144.444% */
+    
+    @include mobile {
+        line-height: 27px;
+    }
 }
 
 .payment {
@@ -168,6 +224,12 @@
     height: 400px;
     align-items: center;
     gap: 48px;
+
+    @include mobile {
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+    }
 }
 
 .reduction {
@@ -180,6 +242,10 @@
     align-self: stretch;
     border-radius: 20px;
     background: #FFF4E2;
+
+    @include mobile {
+        width: 100%;
+    }
 }
 
 .reduction__icon {
@@ -210,6 +276,11 @@
     font-weight: 600;
     line-height: normal;
     letter-spacing: -0.6px;
+
+    @include mobile {
+        font-size: 30px;
+        line-height: -0.56px;
+    }
 }
 
 .reduction__desc {
@@ -219,7 +290,10 @@
     font-style: normal;
     font-weight: 400;
     line-height: 26px;
-    /* 144.444% */
+    
+    @include mobile {
+        line-height: 27px;
+    }
 }
 
 .exchange {
@@ -236,6 +310,11 @@
 
     border-radius: 20px;
     background: #F3F6F8;
+
+    @include mobile {
+        width: 100%;
+        flex-direction: column;
+    }
 }
 
 .exchange__text {
@@ -274,6 +353,10 @@
     display: grid;
     grid-template: repeat(4, 1fr) / repeat(5, 1fr);
     grid-gap: 9px;
+
+    @include mobile {
+        position: static;
+    }
 }
 
 .banks-grid__item {
