--- a/css/main.css
+++ b/css/main.css
@@ -480,6 +480,7 @@ button {
 @media screen and (max-width: 767.9px) and (min-width: 0) {
   .mockup {
     margin-top: 64px;
+    height: 405px;
   }
 }
 
@@ -572,6 +573,12 @@ button {
 @media screen and (max-width: 767.9px) and (min-width: 0) {
   .simple-security {
     flex-direction: column;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199.9px) {
+  .simple-security {
+    flex-wrap: wrap;
+    justify-content: center;
   }
 }
 
@@ -678,12 +685,18 @@ button {
   align-items: flex-start;
   gap: 36px;
   align-self: stretch;
+  max-height: 400px;
   border-radius: 20px;
   background: #EAECFF;
 }
 @media screen and (max-width: 767.9px) and (min-width: 0) {
   .security {
     padding: 40px 24px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199.9px) {
+  .security {
+    width: 832px;
   }
 }
 
@@ -733,8 +746,7 @@ button {
 
 .payment {
   display: flex;
-  width: 1280px;
-  height: 400px;
+  max-width: 1280px;
   align-items: center;
   gap: 48px;
 }
@@ -745,6 +757,12 @@ button {
     height: 100%;
   }
 }
+@media screen and (min-width: 768px) and (max-width: 1199.9px) {
+  .payment {
+    flex-direction: column;
+    align-items: center;
+  }
+}
 
 .reduction {
   display: flex;
@@ -753,13 +771,17 @@ button {
   align-items: flex-start;
   gap: 36px;
   flex: 1 0 0;
-  align-self: stretch;
   border-radius: 20px;
   background: #FFF4E2;
 }
 @media screen and (max-width: 767.9px) and (min-width: 0) {
   .reduction {
     width: 100%;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199.9px) {
+  .reduction {
+    width: 832px;
   }
 }
 
@@ -816,12 +838,12 @@ button {
   position: relative;
   display: flex;
   width: 832px;
+  height: 400px;
   padding: 48px;
   justify-content: center;
   align-items: flex-start;
   gap: 72px;
   flex-shrink: 0;
-  align-self: stretch;
   overflow: hidden;
   border-radius: 20px;
   background: #F3F6F8;
@@ -842,6 +864,11 @@ button {
   margin-right: auto;
   width: 320px;
 }
+@media screen and (max-width: 767.9px) and (min-width: 0) {
+  .exchange__text {
+    width: 100%;
+  }
+}
 
 .exchange__heading {
   color: #00112D;
@@ -858,7 +885,11 @@ button {
   font-family: Inter;
   line-height: 26px;
   width: 365px;
-  z-index: 1;
+}
+@media screen and (max-width: 767.9px) and (min-width: 0) {
+  .exchange__desc {
+    width: 100%;
+  }
 }
 
 .banks-grid {
@@ -872,6 +903,7 @@ button {
 @media screen and (max-width: 767.9px) and (min-width: 0) {
   .banks-grid {
     position: static;
+    align-self: center;
   }
 }
 
@@ -880,6 +912,18 @@ button {
   height: 74px;
   border-radius: 11px;
   background: rgba(0, 0, 0, 0.08);
+}
+.banks-grid__item img {
+  width: -moz-fit-content;
+  width: fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+@media screen and (max-width: 767.9px) and (min-width: 0) {
+  .banks-grid__item {
+    width: 62px;
+    height: 62px;
+  }
 }
 .banks-grid__item:nth-child(1) {
   background-color: #F3F6F8;
@@ -969,16 +1013,27 @@ button {
   }
 }
 
+.features__grid-box {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
 .features-grid {
-  margin: 0 auto;
   display: grid;
-  grid-template: repeat(2, 1fr)/repeat(6, 1fr);
+  grid-template: repeat(2, 1fr)/repeat(6, 116px);
   grid-gap: 32px;
 }
 @media screen and (max-width: 767.9px) and (min-width: 0) {
   .features-grid {
     grid-template: repeat(4, 1fr)/repeat(3, 1fr);
     grid-gap: 25px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199.9px) {
+  .features-grid {
+    grid-template: repeat(3, 1fr)/repeat(4, 116px);
+    grid-gap: 32px;
   }
 }
 
@@ -993,7 +1048,8 @@ button {
 
 .join-us__container {
   display: flex;
-  width: 1280px;
+  flex-wrap: wrap;
+  max-width: 1280px;
   padding: 0px 32px;
   justify-content: center;
   align-items: center;
@@ -1010,6 +1066,7 @@ button {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  max-width: 576px;
   gap: 40px;
   flex: 1 0 0;
 }
@@ -1041,6 +1098,8 @@ button {
 
 .testymonials__img {
   z-index: -1;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .content-box {
@@ -1056,6 +1115,11 @@ button {
   -webkit-backdrop-filter: blur(12px);
           backdrop-filter: blur(12px);
 }
+@media screen and (max-width: 767.9px) and (min-width: 0) {
+  .content-box {
+    padding: 20px 20px 92px;
+  }
+}
 
 .content-box__desc {
   color: white;
@@ -1070,6 +1134,9 @@ button {
 @media screen and (max-width: 767.9px) and (min-width: 0) {
   .content-box__desc {
     margin-bottom: 24px;
+    font-size: 20px;
+    line-height: 30px;
+    font-weight: 600;
   }
 }
 
@@ -1096,6 +1163,12 @@ button {
   /* 122.222% */
   letter-spacing: -0.72px;
   flex: 1 0 0;
+}
+@media screen and (max-width: 767.9px) and (min-width: 0) {
+  .content-box__name {
+    font-size: 30px;
+    line-height: 38px;
+  }
 }
 
 .stars-list {
@@ -1136,6 +1209,13 @@ button {
   margin-left: auto;
   gap: 32px;
 }
+@media screen and (max-width: 767.9px) and (min-width: 0) {
+  .splide__arrows {
+    left: 20px;
+    bottom: 0;
+    gap: 16px;
+  }
+}
 
 .arrows__button--left,
 .arrows__button--right {
@@ -1149,6 +1229,13 @@ button {
   gap: 12px;
   border-radius: 28px;
   border: 1px solid rgba(255, 255, 255, 0.5);
+}
+@media screen and (max-width: 767.9px) and (min-width: 0) {
+  .arrows__button--left,
+  .arrows__button--right {
+    width: 48px;
+    height: 48px;
+  }
 }
 
 .arrows__icon {
@@ -1165,6 +1252,12 @@ button {
   padding: 0 32px;
 }
 
+.footer-content__anchors {
+  display: flex;
+  gap: 32px;
+  width: 320px;
+}
+
 .footer-content {
   display: flex;
   justify-content: space-between;
@@ -1172,6 +1265,16 @@ button {
   align-self: stretch;
   border-bottom: solid 1px #475467;
   padding-bottom: 64px;
+}
+@media screen and (max-width: 767.9px) and (min-width: 0) {
+  .footer-content {
+    flex-direction: column;
+    gap: 48px;
+  }
+}
+
+.footer-content__logo-box {
+  order: -1;
 }
 
 .footer-content__logo {
@@ -1198,6 +1301,10 @@ button {
   font-style: normal;
   font-weight: 400;
   line-height: 24px;
+}
+
+.footer-product {
+  width: 100%;
 }
 
 .footer-product__heading {
@@ -1227,6 +1334,10 @@ button {
   /* 150% */
 }
 
+.footer-resources {
+  width: 100%;
+}
+
 .footer-resources__heading {
   color: #98A2B3;
   margin-bottom: 16px;
@@ -1252,6 +1363,12 @@ button {
   font-weight: 500;
   line-height: 24px;
   /* 150% */
+}
+
+@media screen and (max-width: 767.9px) and (min-width: 0) {
+  .get-app {
+    order: -1;
+  }
 }
 
 .get-app__heading {
@@ -1290,4 +1407,9 @@ button {
 .footer-rights__list {
   display: flex;
   gap: 24px;
+}
+@media screen and (max-width: 767.9px) and (min-width: 0) {
+  .footer-rights__list {
+    display: none;
+  }
 }/*# sourceMappingURL=main.css.map */
