--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -7,6 +7,12 @@
     padding: 0 32px;
 }
 
+.footer-content__anchors {
+    display: flex;
+    gap: 32px;
+    width: 320px;
+}
+
 .footer-content {
     display: flex;
     justify-content: space-between;
@@ -14,6 +20,15 @@
     align-self: stretch;
     border-bottom: solid 1px getColor(gray-600);
     padding-bottom: 64px;
+    
+    @include mobile {
+        flex-direction: column;
+        gap: 48px;
+    }
+}
+
+.footer-content__logo-box {
+    order: -1;
 }
 
 .footer-content__logo {
@@ -43,7 +58,9 @@
     line-height: 24px;
 }
 
-.footer-product {}
+.footer-product {
+    width: 100%;
+}
 
 .footer-content__footer-product {}
 
@@ -77,7 +94,9 @@
     /* 150% */
 }
 
-.footer-resources {}
+.footer-resources {
+    width: 100%;
+}
 
 .footer-content__footer-resources {}
 
@@ -111,7 +130,11 @@
     /* 150% */
 }
 
-.get-app {}
+.get-app {
+    @include mobile {
+        order: -1;
+    }
+}
 
 .footer-content__get-app {}
 
@@ -153,6 +176,10 @@
 .footer-rights__list {
     display: flex;
     gap: 24px;
+
+    @include mobile {
+        display: none;
+    }
 }
 
 .footer-rights__item {}
