--- a/sass/components/_join-us.scss
+++ b/sass/components/_join-us.scss
@@ -8,8 +8,8 @@
 
 .join-us__container {
     display: flex;
-
-    width: 1280px;
+    flex-wrap: wrap;
+    max-width: 1280px;
     padding: 0px 32px;
     justify-content: center;
     align-items: center;
@@ -25,6 +25,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    max-width: 576px;
     gap: 40px;
     flex: 1 0 0;
 
@@ -57,6 +58,7 @@
 
 .testymonials__img {
     z-index: -1;
+    object-fit: cover;
 }
 
 .content-box {
@@ -73,6 +75,10 @@
 
     background: linear-gradient(180deg, rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.6) 100%);
     backdrop-filter: blur(12px);
+
+    @include mobile {
+        padding: 20px 20px 92px;
+    }
 }
 
 .content-box__desc {
@@ -87,6 +93,9 @@
 
     @include mobile {
         margin-bottom: 24px;
+        font-size: 20px;
+        line-height: 30px;
+        font-weight: 600;
     }
 }
 
@@ -114,6 +123,11 @@
     letter-spacing: -0.72px;
 
     flex: 1 0 0;
+
+    @include mobile {
+        font-size: 30px;
+        line-height: 38px;
+    }
 }
 
 .stars-list {
@@ -152,6 +166,12 @@
     align-items: center;
     margin-left: auto;
     gap: 32px;
+
+    @include mobile {
+        left: 20px;
+        bottom: 0;
+        gap: 16px;
+    }
 }
 
 .arrows__button--left,
@@ -166,6 +186,11 @@
     gap: 12px;
     border-radius: 28px;
     border: 1px solid rgba(255, 255, 255, 0.50);
+
+    @include mobile {
+        width: 48px;
+        height: 48px;
+    }
 }
 
 .arrows__icon {
