--- a/sass/components/_money.scss
+++ b/sass/components/_money.scss
@@ -63,6 +63,11 @@
     @include mobile {
         flex-direction: column;
     }
+
+    @include tablet {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
 }
 
 .simple {
@@ -166,12 +171,17 @@
     gap: 36px;
     // flex: 1 0 0;
     align-self: stretch;
+    max-height: 400px;
 
     border-radius: 20px;
     background: #EAECFF;
 
     @include mobile {
         padding: 40px 24px;
+    }
+
+    @include tablet {
+        width: 832px;
     }
 }
 
@@ -220,8 +230,8 @@
 
 .payment {
     display: flex;
-    width: 1280px;
-    height: 400px;
+    max-width: 1280px;
+    // height: 400px;
     align-items: center;
     gap: 48px;
 
@@ -229,6 +239,11 @@
         flex-direction: column;
         width: 100%;
         height: 100%;
+    }
+
+    @include tablet {
+        flex-direction: column;
+        align-items: center;
     }
 }
 
@@ -239,12 +254,15 @@
     align-items: flex-start;
     gap: 36px;
     flex: 1 0 0;
-    align-self: stretch;
     border-radius: 20px;
     background: #FFF4E2;
 
     @include mobile {
         width: 100%;
+    }
+
+    @include tablet {
+        width: 832px;
     }
 }
 
@@ -300,12 +318,12 @@
     position: relative;
     display: flex;
     width: 832px;
+    height: 400px;
     padding: 48px;
     justify-content: center;
     align-items: flex-start;
     gap: 72px;
     flex-shrink: 0;
-    align-self: stretch;
     overflow: hidden;
 
     border-radius: 20px;
@@ -325,6 +343,10 @@
     align-self: stretch;
     margin-right: auto;
     width: 320px;
+
+    @include mobile {
+        width: 100%;
+    }
 }
 
 .exchange__heading {
@@ -343,7 +365,9 @@
     line-height: 26px;
     width: 365px;
 
-    z-index: 1;
+    @include mobile {
+        width: 100%;
+    }
 }
 
 .banks-grid {
@@ -356,6 +380,7 @@
 
     @include mobile {
         position: static;
+        align-self: center;
     }
 }
 
@@ -364,6 +389,16 @@
     height: 74px;
     border-radius: 11px;
     background: rgba(0, 0, 0, 0.08);
+
+    img {
+        width: fit-content;
+        height: fit-content;
+    }
+
+    @include mobile {
+        width: 62px;
+        height: 62px;
+    }
     
 
     &:nth-child(1) {
