--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -43,6 +43,10 @@
         margin-bottom: 48px;
         width: 100%;
     }
+
+    @include tablet {
+        width: 100%;
+    }
 }
 
 .features__grid-box {
