--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,4 +8,6 @@
 @import './components/money';
 @import './components/features';
 @import './components/join-us';
-@import 'components/footer';
+@import './components/footer';
+@import './components/mobile';
+@import './components/modal';
