--- a/sass/components/_mobile.scss
+++ b/sass/components/_mobile.scss
@@ -47,6 +47,26 @@
     right: 30px;
 }
 
+.mobile-menu__btn-mobile {
+    margin-left: auto;
+    background-color: getColor(accent);
+    color: white;
+    padding: 12px 21px;
+    border-radius: 12px;
+    border: 2px solid getColor(accent);
+    transition: 250ms;
+
+    font-family: Inter;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+
+    &:hover {
+        background-color: white;
+        color: getColor(accent);
+    }
+}
+
 .is-hidden {
     transform: translateX(100%);
 }
